--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "weather-app",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,5 +13,8 @@
   "type": "commonjs",
   "dependencies": {
     "request": "^2.88.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
